<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_status_profile_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_status_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_status_name">

        <ImageView
            android:id="@+id/iv_status_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_status_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/tv_name"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_status_profile_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_status_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/tv_email"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_status_profile_layout"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_name" />

    <TextView
        android:id="@+id/tv_status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/tv_status"
        android:textSize="@dimen/_11ssp"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_email" />

    <ImageView
        android:id="@+id/iv_status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_place_holder"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_status_text" />

<!--    <ImageView-->
<!--        android:id="@+id/iv_status_image"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/_8sdp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="@dimen/_8sdp"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@drawable/ic_place_holder"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/view"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_status" />-->

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/likeLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_12sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_like_30"/>

        <TextView
            android:id="@+id/tv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textSize="@dimen/_11ssp"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_12sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/likeLayout"
        app:layout_constraintStart_toEndOf="@+id/likeLayout"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_comment_30"/>

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="@dimen/_11ssp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_created_at"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="Created at: "
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/commentLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/commentLayout" />

    <View
        android:id="@+id/horizontal_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="@dimen/_28sdp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line" />

</androidx.constraintlayout.widget.ConstraintLayout>